# repd_map

./: .gitignore  README.md  nimby_score.json  package-lock.json  points.geojson  points_2.geojson  potential_sites.csv  pyproject.toml  repd_converter.py  scrape_and_analyse.py  test_query.json  tif_test.html
backend/: .~lock.test.csv#  Makefile  df_a_refused.json  nimby_radar.py  nimby_score.json  points_3.geojson  test.csv  test_query.json
backend/funcs/: lamplight-6 (1).gif:Zone.Identifier  repd_converter.py  scrape_and_analyse.py
backend/src/: final.json  main.py  nimby_radar.py  points.geojson
backend/src/data/: .~lock.repd-q1-apr-2025.csv#  backup_object.json  hampshire_projects.csv  nimby_prompt.txt  search_analysis.txt
backend/src/data/archive/: active_projects.csv  df_withdrawn.json  final.json  test.csv
backend/src/funcs/: dorset_analyzer.py  repd_converter.py  scrape_and_analyse.py  utility.py
backend/src/v2_refactor/: refactor_plan.md
backend/src/v2_refactor/outputs/: hampshire_projects.csv
backend/src/v2_refactor/snippets/: hampshireactive.py
repd_map/: 21316655521_165f1107f4_b.pdn  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js
repd_map/src/: app.css  app.html
repd_map/src/lib/: Map.svelte
repd_map/src/lib/components/: About.svelte  Cards.svelte  DelayTimesVisualization.svelte  Timeline.svelte
repd_map/src/lib/utils/: clipboard.js  (+1 more)
repd_map/src/routes/: +page.js  +page.svelte
repd_map/static/: councils.json  df_refused.json  final.json  nimby_score.json  points.geojson
(+21 files in other folders)
