[project]
name = "broken-britain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "fastmcp>=2.10.2",
    "geopandas>=1.1.1",
    "google-generativeai>=0.8.5",
    "greenlet>=3.2.4",
    "markitdown[all]>=0.1.1",
    "mcp>=1.10.1",
    "playwright>=1.54.0",
    "pydantic>=2.11.7",
    "pyee>=13.0.0",
    "pypdf>=6.0.0",
    "pyproj>=3.7.1",
    "ruff>=0.12.8",
    "uvicorn>=0.35.0",
]
